# Mirage

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  LICENSE-MIT  Makefile.toml  README.md
bootstrap/: Cargo.toml  README.md
bootstrap/src/: init.rs  main.rs  start.S
libswitch/: Cargo.toml
libswitch/src/: lib.rs
libswitch/src/apb_misc/: mod.rs
libswitch/src/button/: mod.rs
libswitch/src/clock/: mod.rs
libswitch/src/cluster/: mod.rs
libswitch/src/display/: display.rs  display_config.rs  mod.rs  writer.rs
libswitch/src/fuse/: mod.rs
libswitch/src/gfx/: display_config.rs  mod.rs
libswitch/src/gpio/: mod.rs
libswitch/src/i2c/: mod.rs
libswitch/src/kfuse/: mod.rs
libswitch/src/mc/: mod.rs
libswitch/src/pinmux/: mod.rs
libswitch/src/pmc/: mod.rs
libswitch/src/power/: max77620.rs  mod.rs
libswitch/src/rtc/: mod.rs
libswitch/src/sdmmc/: core.rs
libswitch/src/sdram/: config.rs  mod.rs  params.rs
libswitch/src/se/: mod.rs
libswitch/src/sysctr0/: mod.rs
libswitch/src/sysreg/: mod.rs
libswitch/src/timer/: mod.rs  watchdog.rs
libswitch/src/tsec/: mod.rs
libswitch/src/uart/: mod.rs
libswitch/src/utils/: mod.rs
libtegra/: Cargo.toml
libtegra/src/: lib.rs
libtegra/src/apb_misc/: mod.rs
libtegra/src/button/: mod.rs
libtegra/src/clock/: mod.rs
libtegra/src/cluster/: mod.rs
libtegra/src/display/: display.rs  writer.rs
libtegra/src/gpio/: mod.rs
libtegra/src/i2c/: mod.rs
libtegra/src/mc/: mod.rs
libtegra/src/pinmux/: mod.rs
libtegra/src/power/: max77620.rs  mod.rs
libtegra/src/rtc/: mod.rs
libtegra/src/sdmmc/: core.rs  mod.rs
libtegra/src/sdram/: mod.rs  params.rs
libtegra/src/se/: mod.rs
libtegra/src/sysctr0/: mod.rs
libtegra/src/sysreg/: mod.rs
libtegra/src/timer/: mod.rs
libtegra/src/tsec/: mod.rs
libtegra/src/uart/: mod.rs
linker-scripts/: bootstrap.ld
mmio/: Cargo.toml
targets/: README.md  aarch64-mirage-none.json  (+1 more)
(+1 files in other folders)
