[package]
name = "mirage-bootstrap"
version = "0.2.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
license = "Apache-2.0/MIT"
edition = "2018"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[dependencies]
mirage-libtegra = { path = "../libtegra" }
mirage-mmio = { path = "../mmio" }

[features]
debug_uart_port = []
