[package]
name = "mirage-libswitch"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
license = "Apache-2.0/MIT"
edition = "2018"

[lib]
name = "mirage_libswitch"
path = "src/lib.rs"
crate-type = ["staticlib"]

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[dependencies]
register = "0.3.3"

[dependencies.num-traits]
version = "0.2"
default-features = false
