[package]
name = "mirage-libtegra"
version = "2.0.0"
authors = [
    "Valentin B. <valentin.be@protonmail.com>",
    "Justus K. <justus.k@protonmail.com>",
]
license = "Apache-2.0/MIT"
edition = "2018"

[lib]
name = "mirage_libtegra"
path = "src/lib.rs"

[dependencies]
bitflags = "1.2.0"
enum_primitive = { git = "https://github.com/roblabla/enum_primitive-rs.git" }
mirage-mmio = { path = "../mmio" }
paste = "0.1.6"
